<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_blue"
        android:padding="12dp"
        android:layout_margin="8dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bp_write_date"
            android:textColor="#000000"
            android:textSize="19dp"
            android:gravity="left"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_time_type"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="아침"
            android:textColor="#000000"
            android:textSize="19dp"
            android:gravity="center"
            android:layout_marginStart="20dp"

            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/btn_on"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/tv_bp_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bp_write_max"
            android:textColor="#000000"
            android:textSize="19dp"
            android:gravity="left"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line" />

        <TextView
            android:id="@+id/tv_bp_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bp_write_min"
            android:textColor="#000000"
            android:textSize="19dp"
            android:gravity="left"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bp_max" />

        <TextView
            android:id="@+id/tv_memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bp_write_memo"
            android:textColor="#000000"
            android:textSize="19dp"
            android:gravity="left"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bp_min"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>