<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_main_blue"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/top_guide_line">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_title_icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_main_bp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@+id/top_guide_line"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_write_bp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu_blue_round"
            android:padding="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- 혈압 기록화면으로 이동 버튼 -->
            <ImageView
                android:id="@+id/iv_write_bp"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:src="@drawable/btn_write_bp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_write_bp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_write_blood_pressure"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textColor="#000000"

                app:layout_constraintTop_toBottomOf="@+id/iv_write_bp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_list_bp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="@drawable/bg_main_menu_blue_round"
            android:padding="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cl_write_bp">

            <!-- 혈압 기록 리스트로 이동 버튼 -->
            <ImageView
                android:id="@+id/iv_list_bp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/btn_list_bp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_list_bp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_list_blood_pressure"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textColor="#000000"

                app:layout_constraintTop_toBottomOf="@+id/iv_list_bp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        app:layout_constraintGuide_percent="0.3"
        android:id="@+id/top_guide_line"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/bottom_guide_line"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>